<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/EditTextHint"
    tools:context="com.helenacorp.android.mybibliotheque.SubmitBookActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_activitySubmit"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/orangeD"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/title_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:hint="@string/title_sub"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_activitySubmit" />

    <EditText
        android:id="@+id/autorLastName_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="14dp"
        android:hint="@string/lastname_sub"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_submit" />

    <Button
        android:id="@+id/btn_add_submit"
        style="@style/buttonTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        android:text="@string/btn_add"
        android:textColor="@color/bleud"
        app:layout_constraintBottom_toTopOf="@+id/btn_clean_submit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_photoView" />

    <Button
        android:id="@+id/btn_clean_submit"
        style="@style/buttonTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="111dp"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_clean"
        android:textColor="@color/bleud"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_submit" />

    <EditText
        android:id="@+id/isbn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="14dp"
        android:hint="@string/isbn"
        android:inputType="number"
        android:maxLines="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/submit_btn_isbn"
        app:layout_constraintTop_toBottomOf="@+id/autorLastName_submit" />

    <TextView
        android:id="@+id/submit_resum"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="14dp"
        android:visibility="invisible"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:maxLines="2"
        android:minLines="1"
        android:scrollbars = "vertical"
        app:layout_constraintTop_toBottomOf="@+id/isbn" />

    <Button
        android:id="@+id/submit_btn_isbn"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/qrcode"
        android:elevation="1dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/isbn"
        app:layout_constraintLeft_toRightOf="@+id/isbn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autorLastName_submit" />

    <RatingBar
        android:id="@+id/submit_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:isIndicator="false"
        android:numStars="5"
        android:rating="1"
        android:stepSize="0.5"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_submit"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_resum"
        app:layout_constraintVertical_bias="0.169" />

    <ImageView
        android:id="@+id/submit_photoView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_camera_alt_yellow_700_24dp"
        android:clickable="true"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_rating" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/submit_viewpic"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:visibility="visible"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_rating"
        app:riv_corner_radius="24dp"
        app:riv_oval="true" />

</android.support.constraint.ConstraintLayout>
